--- a/infra/frontend/docker-compose.dev.yml
+++ b/infra/frontend/docker-compose.dev.yml
@@ -16,8 +16,8 @@ services:
         - PORT=${MW_FRONTEND_SERVER_PORT}
         - NODE_ENV=${NODE_ENV}
         - NODE_PATH=/app
-        - API_ADDRESS=http://api.mw.${SUBDOMAIN}${DOMAIN}
-        - API_BASE_URL=/api/v1
+        - MW_BACKEND_ADDRESS=https://api.mw.${SUBDOMAIN}${DOMAIN}
+        - MW_BACKEND_BASE_URL=/api/v1
     ports:
       - ${MW_FRONTEND_SERVER_PORT}:${MW_FRONTEND_SERVER_PORT}
     networks:
