updated github actions for production deploy

--- a/.github/workflows/production-ci-cd-pipeline.yml
+++ b/.github/workflows/production-ci-cd-pipeline.yml
@@ -2,7 +2,7 @@ name: prod CI/CD pipeline
 
 on:
   pull_request:
-    branches: [ develop, release/* ]
+    branches: [ main, release/* ]
   workflow_dispatch:
 
 concurrency:
