--- a/.github/workflows/production-ci-cd-pipeline.yml
+++ b/.github/workflows/production-ci-cd-pipeline.yml
@@ -1,9 +1,9 @@
 name: prod CI/CD pipeline
 
 on:
-  pull_request:
-    branches: [ main, release/* ]
-#  workflow_dispatch:
+#  pull_request:
+#    branches: [ main, release/* ]
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
