--- a/.github/workflows/production-ci-cd-pipeline.yml
+++ b/.github/workflows/production-ci-cd-pipeline.yml
@@ -4,6 +4,11 @@ on:
 #  pull_request:
 #    branches: [ main, release/* ]
   workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch to run the workflow on'
+        required: true
+        default: 'main'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
