--- a/mapping_workbench/frontend/Makefile
+++ b/mapping_workbench/frontend/Makefile
@@ -27,4 +27,4 @@ install-prod-frontend:
 #	@ npm install && npm install -g serve && npm run build && rm -fr node_modules
 
 test-e2e:
-	@ npm run test-e2e
+	@ npm run test:e2e:pr
