--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -3,7 +3,7 @@ name: Tests on push
 on:
 #  workflow_dispatch:
   push:
-    branches: [ feature/* , hotfix/* ]
+    branches: [ feature/*, hotfix/*, release/* ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
