--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -46,6 +46,7 @@
     "@react-pdf/renderer": "3.1.9",
     "@reduxjs/toolkit": "1.9.5",
     "@uiw/codemirror-extensions-basic-setup": "^4.23.0",
+    "@uiw/codemirror-themes-all": "^4.23.1",
     "@uiw/react-codemirror": "^4.23.0",
     "@untitled-ui/icons-react": "0.1.1",
     "apexcharts": "3.40.0",
