--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # BACKEND dependencies
 python-multipart~=0.0.9
-motor~=3.2.0
+motor==3.5.3
+pymongo==4.8.0
 python-dotenv~=1.0.0
 pydantic~=2.4
 pydantic-settings~=2.0
