--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "2.0.4",
     "@aws-amplify/auth": "5.3.6",
+    "@codemirror/lang-json": "^6.0.1",
     "@codemirror/lang-xml": "^6.1.0",
     "@codemirror/lang-yaml": "^6.1.1",
     "@emotion/cache": "11.11.0",
@@ -54,6 +55,7 @@
     "aws-amplify": "5.2.1",
     "axios": "^1.4.0",
     "classnames": "^2.5.1",
+    "codemirror-lang-sparql": "^1.0.0",
     "codemirror-lang-turtle": "^0.0.2",
     "date-fns": "2.30.0",
     "dotenv": "^16.3.1",
