Added Import & Process Package feature

--- a/.github/workflows/production-sync-develop.yml
+++ b/.github/workflows/production-sync-develop.yml
@@ -1,9 +1,10 @@
 name: Sync Develop with Main
 
 on:
-  push:
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
+  workflow_dispatch:
 
 jobs:
   sync:
