updated libraries deps

--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -17,7 +17,7 @@
     "cy:tests": "cypress run"
   },
   "engines": {
-    "node": ">=12.x"
+    "node": ">=18.x"
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "2.0.4",
@@ -29,15 +29,16 @@
     "@emotion/react": "11.11.0",
     "@emotion/server": "11.11.0",
     "@emotion/styled": "11.11.0",
+    "@fluree/crypto": "^3.0.0",
     "@fluree/crypto-utils": "^1.10.0",
-    "@fluree/fluree-client": "^1.0.6-beta1",
-    "@fullcalendar/core": "6.1.7",
-    "@fullcalendar/daygrid": "6.1.7",
-    "@fullcalendar/interaction": "6.1.7",
-    "@fullcalendar/list": "6.1.7",
-    "@fullcalendar/react": "6.1.7",
-    "@fullcalendar/timegrid": "6.1.7",
-    "@fullcalendar/timeline": "6.1.7",
+    "@fluree/fluree-client": "1.0.6",
+    "@fullcalendar/core": "6.1.15",
+    "@fullcalendar/daygrid": "6.1.15",
+    "@fullcalendar/interaction": "6.1.15",
+    "@fullcalendar/list": "6.1.15",
+    "@fullcalendar/react": "6.1.15",
+    "@fullcalendar/timegrid": "6.1.15",
+    "@fullcalendar/timeline": "6.1.15",
     "@mui/icons-material": "5.11.16",
     "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.13.0",
@@ -53,16 +54,16 @@
     "apexcharts": "3.40.0",
     "autosuggest-highlight": "^3.3.4",
     "aws-amplify": "5.2.1",
-    "axios": "^1.4.0",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "codemirror-lang-sparql": "^1.0.0",
     "codemirror-lang-turtle": "^0.0.2",
     "date-fns": "2.30.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "draft-js": "0.11.7",
     "fast-xml-parser": "^4.4.0",
     "file-saver": "^2.0.5",
-    "firebase": "9.22.0",
+    "firebase": "9.23.0",
     "formik": "2.2.9",
     "gray-matter": "4.0.3",
     "html-react-parser": "^4.2.2",
@@ -76,7 +77,7 @@
     "moment-timezone": "^0.5.45",
     "mui-one-time-password-input": "1.1.0",
     "n3": "^1.20.4",
-    "next": "13.4.19",
+    "next": "14.2.10",
     "next-auth": "^4.24.7",
     "nprogress": "0.2.0",
     "numeral": "2.0.6",
@@ -104,7 +105,7 @@
     "simplebar-react": "3.2.4",
     "stylis": "4.2.0",
     "stylis-plugin-rtl": "2.1.1",
-    "uuid": "^9.0.0",
+    "uuid": "^11.0.3",
     "xml2js": "^0.6.2",
     "yup": "1.1.1"
   },
@@ -126,8 +127,8 @@
     "babel-plugin-prismjs": "^2.1.0",
     "cypress": "^13.13.3",
     "cypress-cucumber-preprocessor": "^4.3.1",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
+    "eslint": "9.15.0",
+    "eslint-config-next": "15.0.3",
     "sass": "^1.65.1",
     "typescript": "5.0.4"
   },
