--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -41,8 +41,9 @@
     "@fullcalendar/timeline": "6.1.15",
     "@mui/icons-material": "5.11.16",
     "@mui/lab": "^5.0.0-alpha.129",
-    "@mui/material": "^5.13.0",
+    "@mui/material": "^5.16.7",
     "@mui/system": "5.15.20",
+    "@mui/x-data-grid": "^7.22.3",
     "@mui/x-date-pickers": "6.4.0",
     "@mui/x-tree-view": "^7.15.0",
     "@react-pdf/renderer": "3.1.9",
