--- a/mapping_workbench/frontend/package.json
+++ b/mapping_workbench/frontend/package.json
@@ -43,6 +43,7 @@
     "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.13.0",
     "@mui/system": "5.15.20",
+    "@mui/x-charts": "^7.23.6",
     "@mui/x-date-pickers": "6.4.0",
     "@mui/x-tree-view": "^7.15.0",
     "@react-pdf/renderer": "3.1.9",
