feat: added test ci/cd env

--- a/mapping_workbench/frontend/Makefile
+++ b/mapping_workbench/frontend/Makefile
@@ -2,6 +2,10 @@ start-dev-frontend:
 	@ echo "Starting DEV FRONTEND"
 	@ npm run dev
 
+start-test-frontend:
+	@ echo "Starting TEST FRONTEND"
+	@ npm run dev
+
 start-staging-frontend:
 	@ echo "Starting STAGING FRONTEND"
 	@ npm run dev
@@ -13,6 +17,10 @@ start-prod-frontend:
 
 install-dev-frontend:
 	@ echo "Installing DEV FRONTEND"
+	@ npm install
+
+install-test-frontend:
+	@ echo "Installing TEST FRONTEND"
 	@ npm install
 
 install-staging-frontend:
